--- a/components/Service/Service.module.css
+++ b/components/Service/Service.module.css
@@ -1,7 +1,8 @@
 .service {
-  background-color: var(--colorPrimary);
+  /* background: linear-gradient(var(--colorPrimary), var(--colorBlack)); */
+  background-color: var(--colorBlack);
   box-sizing: border-box;
-  padding: 100px 7.5%;
+  padding: 100px 15%;
   position: relative;
   font-family: var(--fontPrimary);
 }
@@ -18,6 +19,7 @@
 }
 
 .offer h1 {
+  /* text-align: left; */
   color: var(--colorBlack);
 }
 
@@ -26,7 +28,7 @@
 }
 
 .service h1 {
-  align-self: flex-end;
+  /* align-self: flex-end; */
 }
 
 .offerContainer {
@@ -89,6 +91,9 @@
   position: relative;
   height: 400px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageContainer {
@@ -102,10 +107,10 @@
 }
 
 .offerImages img {
-  border-radius: 4px;
-  width: 100%;
-  height: 100%;
-  animation: levitate 4s ease-in-out infinite;
+  /* border-radius: 4px; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* animation: levitate 4s ease-in-out infinite; */
 }
 
 .offerImageWrapper {
@@ -180,7 +185,7 @@
   opacity: 1;
 }
 
-@media (max-width: 480px) {
+@media (min-width: 300px) {
   .service h1 {
     align-self: center;
   }
@@ -207,7 +212,7 @@
   }
 
   .imageContainerWrapper {
-    height: 250px;
+    /* height: 250px; */
   }
 
   .offerImageWrapper {
